k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: landmark-app-lb
  namespace: landmark
spec:
  type: LoadBalancer
  selector:
    app: landmark-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landmark-app-ingress
  namespace: landmark
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - INGRESS_HOST
  rules:
  - host: INGRESS_HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landmark-app-service
            port:
              number: 80
